TP-770: Some more code polish.